Styling for max width

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,11 +4,11 @@
  * ref：https://v1.vuepress.vuejs.org/config/#index-styl
  */
 
-.home .hero img
-  max-width 450px!important
-
 .header
   background-color $backgroundColor
-
-.search-box
-  display none
+  
+.theme-container.home-override .theme-default-content {
+  width: 100%
+  max-width: 100%
+  padding: 0
+}
